--- a/public/css/icons.css
+++ b/public/css/icons.css
@@ -1,39 +1,39 @@
 .taiko{
 	display: inline-block;
-	background-image:url("../icons/Insane-t.png");
+	background-image:url("../icons/taiko.gif");
 	width: 16px;
 	height: 16px;
 	
 }
 .taiko.off{
-	background-image:url("../icons/Insane-tb.png");
+	background-image:url("../icons/taiko-b.gif");
 }
 .osu{
 	display: inline-block;
-	background-image:url("../icons/Insane-s.png");
+	background-image:url("../icons/osu.gif");
 	width: 16px;
 	height: 16px;
 	
 }
 .osu.off{
-	background-image:url("../icons/Insane-sb.png");
+	background-image:url("../icons/osu-b.gif");
 }
 .mania{
 	display: inline-block;
-	background-image:url("../icons/Insane-m.png");
+	background-image:url("../icons/mania.gif");
 	width: 16px;
 	height: 16px;
 }
 .mania.off{
-	background-image:url("../icons/Insane-mb.png");
+	background-image:url("../icons/mania-b.gif");
 }
 .ctb{
 	display: inline-block;
-	background-image:url("../icons/Insane-f.png");
+	background-image:url("../icons/ctb.gif");
 	width: 16px;
 	height: 16px;
 	
 }
 .ctb.off{
-	background-image:url("../icons/Insane-fb.png");
+	background-image:url("../icons/ctb-b.gif");
 }
